# laminar

./: CMakeLists.txt  README.md  df.h  df_interface.cpp  df_interface.h  output_handler.cpp  subscription_event_handler.cpp  woofc.h
benchmarks/: CMakeLists.txt  anomaly-opt-body.cpp  anomaly-opt-setup.cpp  anomaly-test-body.cpp  anomaly-test-setup.cpp  anomaly-test.cpp  do-riot.sh  dspbench.cpp  grep_mapreduce.cpp  k_means_mapreduce.cpp  ks-test.cpp  latency-test-body.c  logistic_regression_mapreduce.cpp  matmul-rich.cpp  matmul.cpp  msg_stress_test.cpp  regress-test.cpp  riot.cpp  riot_stats.cpp
benchmarks/dspbench_data/: simple.txt
benchmarks/scripts/: do-grep.sh  do-kmeans.sh  do-regression.sh  process_riot_stats.py
docs/: README.md  bashrc-functions.md  benchmarks.md  laminar-dev-guide.md  laminar-internals.md  manual-install.md  vm-setup-centos7.md
docs/dataflow-concept/: res.py
logger_system/: CMakeLists.txt
logger_system/include/logger_system/: df_logger.h  df_logger_settings.h  df_operation_logger.h
logger_system/src/: CMakeLists.txt  df_logger.c  df_operation_logger.c
operation_system/: CMakeLists.txt
operation_system/include/operation_system/: df_operation.h  df_operations.h
operation_system/src/: CMakeLists.txt  df_operation.c  df_operations.c
operation_system/src/operations/: CMakeLists.txt  df_arithmetic.c  df_arithmetic.h  df_cast.c  df_cast.h  df_custom_operations.cpp  df_custom_operations.h  df_internal.c  df_internal.h  df_linear_algebra.c  df_linear_algebra.h  df_logic.c  df_logic.h  df_machine_learning.cpp  df_machine_learning.h  df_string.cpp  df_string.h
operation_system/src/operations/anomaly_benchmark/: CMakeLists.txt  anomaly_test.cpp  anomaly_test.h
operation_system/src/operations/corr_benchmark/: CMakeLists.txt  corr.c  corr_test.cpp  corr_test.h
operation_system/src/operations/ks_benchmark/: CMakeLists.txt  ks_test.cpp  ks_test.h
operation_system/src/operations/mapreduce_benchmark/: CMakeLists.txt  grep.cpp  k_means_clustering.cpp  logistic_regression.cpp  mapreduce.h
operation_system/src/operations/regress_benchmark/: CMakeLists.txt  array.c  array.h  regress.c  regress.h  regress_test.cpp  regress_test.h
operation_system/src/operations/riot_benchmark/: CMakeLists.txt  annotate.cpp  average.cpp  bloom_filter.cpp  distinct_count.cpp  interpolate.cpp  kalman_filter.cpp  plot.cpp  range_filter.cpp  regression.cpp  riot.h  riot_config.h  riot_utils.cpp  serialize_senml.cpp  sink.cpp  window_regression.cpp
operation_system/src/operations/riot_benchmark/preprocessing/: csv_to_senml.cpp
operation_system/src/operations/riot_benchmark/reference_impls/: annotate.cpp  average.cpp  bloom_filter.cpp  distinct_count.cpp  interpolation.cpp  kalman.cpp  range_filter.cpp  senml_parse.cpp  serialize.cpp
operation_system/test/: CMakeLists.txt
operation_system/test/operations/: CMakeLists.txt  df_test_arithmetic_abs.cpp  df_test_arithmetic_addition.cpp  df_test_arithmetic_division.cpp  df_test_arithmetic_modulo.cpp  df_test_arithmetic_multiplication.cpp  df_test_arithmetic_sqrt.cpp  df_test_arithmetic_subtraction.cpp  df_test_linear_algebra_matrix_multiplication.cpp  df_test_logic_and.cpp  df_test_logic_eq.cpp  df_test_logic_gt.cpp  df_test_logic_gte.cpp  df_test_logic_lt.cpp  df_test_logic_lte.cpp  df_test_logic_neq.cpp  df_test_logic_not.cpp  df_test_logic_or.cpp
tests/: CMakeLists.txt  arithmetic_tests.cpp  baseline-regression.cpp  conditional_tests.cpp  crash.sh  crash_test.cpp  custom_operation_test.cpp  distributed_addition.cpp  distributed_multinode_regression.cpp  distributed_simple_laminar_example.cpp  distributed_vector.cpp  loop_tests.cpp  multinode_regression.cpp  namespace_tests.cpp  quadratic-body.cpp  quadratic-preamble.cpp  simple_laminar_example.cpp  test_utils.h  tests.cpp  tests.h  types_tests.cpp
tests/type_system/: CMakeLists.txt  ts_test_array.cpp  ts_test_prim_2d_array.cpp
type_system/: CMakeLists.txt
type_system/documentation/examples/: CMakeLists.txt  primitive_type.c  primitive_type_sys.c
type_system/include/array/type_system/types/: ts_array.h
type_system/include/error/type_system/types/: ts_error.h
type_system/include/list/type_system/types/: ts_list.h
type_system/include/matrix/type_system/types/: ts_matrix.h
type_system/include/primitive/type_system/types/: ts_primitive.h
type_system/include/string/type_system/types/: ts_string.h
type_system/include/type_system/type_system/: ts_settings.h  ts_type.h  ts_types.h
type_system/src/: CMakeLists.txt  ts_type.c  ts_types.c
type_system/src/converter/: ts_json_converter.c  ts_json_converter.h
type_system/src/serialization/: CMakeLists.txt  ts_native_serialization.c  ts_native_serialization.h  ts_serialization_util.c  ts_string_serialization.c  ts_string_serialization.h
type_system/src/types/: CMakeLists.txt  ts_array.c  ts_error.c  ts_list.c  ts_matrix.c  ts_primitive.c  ts_string.c
type_system/test/: CMakeLists.txt  ts_test_print.cpp
